# terraria-clone

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/terraria/core/: Application.h
include/terraria/entities/: Dragon.h  FlyingEnemy.h  Player.h  Tools.h  Vec2.h  Worm.h  Zombie.h
include/terraria/game/: ChatConsole.h  CombatSystem.h  CraftingSystem.h  DamageNumberSystem.h  EnemyManager.h  Game.h  InventorySystem.h  MenuSystem.h  Minimap.h  PhysicsSystem.h  SaveManager.h
include/terraria/input/: InputSystem.h
include/terraria/rendering/: HudState.h  Renderer.h
include/terraria/world/: Tile.h  World.h  WorldGenerator.h
src/: main.cpp
src/core/: Application.cpp
src/game/: ChatConsole.cpp  CombatSystem.cpp  CraftingSystem.cpp  DamageNumberSystem.cpp  EnemyManager.cpp  Game.cpp  InventorySystem.cpp  MenuSystem.cpp  Minimap.cpp  PhysicsSystem.cpp  SaveManager.cpp
src/input/: SdlInputSystem.cpp
src/rendering/: SdlRenderer.cpp
src/world/: Tile.cpp  World.cpp  WorldGenerator.cpp
